background fix on small screens
text and buttons become out of center on small screens

--- a/app/main/HomeBackground.module.css
+++ b/app/main/HomeBackground.module.css
@@ -4,11 +4,11 @@
 }
 
 .bg {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  right: 0;
+  height: 100%;
   background: url("/images/banner/slide00.jpg") top center / contain no-repeat;
   animation: colorPulse 12s ease-in-out infinite;
   z-index: -2;
